@@ -10,6 +10,7 @@ OCaml 4.02.1:
 - PR#6564: infinite loop in Mtype.remove_aliases
 - PR#6563: Inclusion of packs failing to run module initializers
 - PR#6565: compilation fails with Env.Error(_)
+- PR#6566: -short-paths and signature inclusion errors
 
 OCaml 4.02.0:
 -------------
